# vtt-synced-voice

./: .gitignore  HANDOVER.md  HANDOVER_NOTE.md  LICENSE  README.ja.md  README.md  pyproject.toml  requirements.txt  test_run.py  test_run.py.example
src/vtt_synced_voice/: __init__.py  cue_builder.py  cue_merger.py  onset.py  transcriber.py  vtt_io.py
tests/: test_cue_builder.py  test_cue_merger.py  test_onset.py  test_vtt_io.py
