[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vtt-synced-voice"
version = "0.1.4"
description = "Generate VTT subtitles with timestamps snapped to voice onset using WhisperX forced alignment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["vtt", "subtitle", "whisper", "whisperx", "forced-alignment", "speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24",
    "whisperx>=3.1",
    "janome>=0.5",
]

[project.urls]
Homepage = "https://github.com/imin-minnade/vtt-synced-voice"
Repository = "https://github.com/imin-minnade/vtt-synced-voice"
Issues = "https://github.com/imin-minnade/vtt-synced-voice/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vtt_synced_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
